update sort filt
