# Server/src/routes/actionHistoryR.js
@@ -3,7 +3,7 @@ const router = express.Router();
 
 const actionHistoryController = require('../action-history/controllers/actionHistoryController');
 
-router.get('/actionhistory/all', actionHistoryController.getAll);
+router.get('/actionhistory', actionHistoryController.getAll);
 router.get('/actionhistory/search/:field', actionHistoryController.getByField);
 router.post('/actionhistory/create', actionHistoryController.create);
 router.put('/actionhistory/update/:id', actionHistoryController.update);
