# Server/src/routes/dashboardR.js
@@ -5,7 +5,7 @@ const swaggerUi = require('swagger-ui-express');
 
 const dashBoardController = require('../dash-board/controllers/dashBoardController');
 
-router.get('/dashboard/all', dashBoardController.getAll);
+router.get('/dashboard', dashBoardController.getAll);
 router.get('/dashboard/search/:field', dashBoardController.getByValue);
 
 module.exports = router;
