# Server/src/routes/dataSensorR.js
@@ -5,7 +5,7 @@ const swaggerUi = require('swagger-ui-express');
 
 const dataSensorController = require('../data-sensor/controllers/dataSensorController');
 
-router.get('/datasensor/all', dataSensorController.getAll);
+router.get('/datasensor', dataSensorController.getAll);
 router.get('/datasensor/search/:field', dataSensorController.getByField);
 router.post('/datasensor/create', dataSensorController.create);
 router.put('/datasensor/update/:id', dataSensorController.update);
